# Reddit-Refresh-Reloaded

./: .env  Cargo.toml  Design.md  README.md  build.rs  sqlx-data.json
docker/: Dockerfile  docker-compose.yml
frontend/: codegen.yml  package-lock.json  package.json  schema.graphql
frontend/graphql/: queries.graphql
frontend/src/: App.js  App.tsx  Settings.js  index.js  index.tsx  types.ts
frontend/src/components/: AppBar.tsx  AuthWrapper.tsx  Login.tsx  ResultsPage.tsx  SearchDialog.jsx  SearchDialog.tsx  SidebarDrawer.jsx  SidebarDrawer.tsx  SnackbarUtils.tsx
frontend/src/pages/: ResultsPage.tsx  SearchPage.jsx
frontend/src/stories/: 0-SidebarDrawer.stories.js  0-SidebarDrawer.stories.tsx  1-SearchPage.stories.js  1-SearchPage.stories.tsx  2-SearchDialog.stories.js
src/: auth.rs  config.rs  generate_schema.rs  main.rs  routes.rs  scanner.rs
src/db/: mod.rs  result.rs  search.rs  user.rs
src/db/migrations/: V1__initial_migration.sql  initial-migration.sql
src/db/notifiers/: apprise.rs  gotify.rs  mod.rs
src/graphql/: mod.rs  objects.rs  scalars.rs  schema.rs
src/notifiers/: apprise.rs  gotify.rs  mod.rs
src/scanner/: data.rs  manager.rs  mod.rs  scanner.rs
