[package]
name = "reddit_refresh_reloaded"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-rt = "1.1.1"
actix-http = "1.0.1"
env_logger = "0.7.1"
log = "0.4.8"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
chrono = "0.4.12"
dotenv = "0.15.0"
futures = "0.3.5"
anyhow = "1.0.31"
humantime = "2.0.1"
tokio = { version = "0.2.21", features = [ "macros"] }
serde = { version = "1.0.114", features = [ "derive" ] }
async-graphql = "1.16.5"
async-graphql-actix-web = "1.16.4"
bcrypt = "0.8.1"
actix-web-httpauth = "0.4.1"
jsonwebtoken = "7.2.0"
envy = "0.4.1"

[build-dependencies]
log = "0.4.8"
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.7.1"
