[package]
name = "reddit_refresh_reloaded"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-web-actors = "3.0.0"
actix-rt = "1.1.1"
actix-http = "2.1.0"
env_logger = "0.8.1"
log = "0.4.11"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.8"
anyhow = "1.0.34"
humantime = "2.0.1"
tokio = { version = "0.2.21", features = [ "macros", "time" ] }
serde = { version = "1.0.114", features = [ "derive" ] }
async-graphql = "2.1.1"
async-graphql-actix-web = "2.1.1"
bcrypt = "0.9.0"
actix-web-httpauth = "0.5.0"
jsonwebtoken = "7.2.0"
envy = "0.4.1"
reqwest = { version = "0.10.7", features = [ "json" ] }
serde_json = "1.0.59"

[build-dependencies]
log = "0.4.11"
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.8.1"
