[package]
name = "reddit_refresh_reloaded"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix-rt = "1.1.1"
actix-http = "2.1.0"
env_logger = "0.9.0"
log = "0.4.11"
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "chrono", "offline" ] }
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.17"
anyhow = "1.0.34"
humantime = "2.0.1"
tokio = { version = "0.2.21", features = [ "macros", "time" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
async-graphql = "2.11.1"
async-graphql-actix-web = "2.11.1"
bcrypt = "0.10.1"
actix-web-httpauth = "0.5.0"
jsonwebtoken = "7.2.0"
envy = "0.4.1"
reqwest = { version = "0.10.10", features = [ "json" ] }
serde_json = "1.0.69"
async-trait = "0.1.41"
tokio-stream = "0.1.7"
actix-cors = "0.5.4"
actix-files = "0.5.0"

[build-dependencies]
log = "0.4.11"
refinery = { git = "https://github.com/rust-db/refinery", features = [ "postgres" ] }
dotenv = "0.15.0"
env_logger = "0.9.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generate_schema"
path = "src/generate_schema.rs"
